--- a/src/resources/styles/_variables.scss
+++ b/src/resources/styles/_variables.scss
@@ -2,7 +2,7 @@ $colors: (
   white: #ffffff,
   black: #000000,
   blue: #3274ff,
-  gray: #838997,
+  gray: #f8f8f8,
   green: #54efd2,
   indigo: #5528FF,
 );
