--- a/src/resources/styles/app.scss
+++ b/src/resources/styles/app.scss
@@ -1,5 +1,38 @@
-@import './styles/variables';
-@import './styles/media';
+@import './vendor/normalize';
+@import './fonts';
+@import './variables';
+@import './media';
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font: 400 1.6rem/1.5 'Hellix', '-apple-system', BlinkMacSystemFont, 'San Francisco', 'Helvetica Neue', Helvetica, Ubuntu, Roboto, Noto, 'Segoe UI', Arial, sans-serif;
+  background-color: map-get($colors, white);
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+strong {
+  font-weight: 500;
+}
+
+p {
+  font-size: 1.8rem;
+  margin: 0 0 3rem 0;
+
+  &:last-child {
+    margin: 0;
+  }
+}
 
 .app {
 
@@ -39,13 +72,38 @@
 .section {
   display: flex;
   justify-content: center;
-  align-items: center;
-  height: 100vh;
-  padding: 0 1.5rem;
+  padding: 5rem 0;
+
+  &_intro {
+    height: 100vh;
+    align-items: center;
+  }
+
+  &_about {
+
+  }
 
   &__content {
     width: 100%;
     max-width: 86rem;
+    padding: 0 1.5rem;
+  }
+
+  &__row {
+    display: flex;
+    margin-left: -1.5rem;
+    margin-right: -1.5rem;
+  }
+
+  &__cell {
+    flex: 1 0 0;
+    padding: 0 1.5rem;
+  }
+
+  &__heading {
+    font-weight: 500;
+    font-size: 3.2rem;
+    margin: 0 0 2rem 0;
   }
 }
 
@@ -94,14 +152,19 @@
 .info {
   &__name {
     font-size: 2.2rem;
-    font-weight: 500;
+    font-weight: 600;
     margin: 0;
+  }
+
+  &__position {
+    font-weight: 400;
+    font-size: 1.6rem;
   }
 }
 
 .copy {
   font-size: 2.7rem;
-  font-weight: 300;
+  font-weight: 500;
 
   @include mobile() {
     font-size: 3.8rem;
@@ -210,5 +273,30 @@
 
   &:hover {
     opacity: .6;
+  }
+}
+
+.skills {
+  background: map-get($colors, gray);
+  padding: 3rem 4rem;
+}
+
+.definition-list {
+  margin: 0;
+
+  &__title {
+    font-weight: 500;
+    font-size: 2.2rem;
+    margin-bottom: 1rem;
+  }
+
+  &__description {
+    font-weight: 400;
+    font-size: 1.6rem;
+    margin: 0 0 2rem 0;
+
+    &:last-child {
+      margin: 0;
+    }
   }
 }
